# puya-odoo-mcp

./: CLAUDE.md  README.md  permissions.yaml  pyproject.toml
config/: shared.env  shared.staging.env
src/puya_odoo_mcp/: __main__.py  audit.py  config.py  odoo_client.py  permissions.yaml  rbac.py  server.py  slack.py  telegram.py
tests/: test_audit.py  test_config.py  test_rbac.py
